<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">rCard</string>
    <string name="companies_list_str">Company List</string>
    <string name="displayrcards">List rCards</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="name_hint">John Appleseed</string>
    <string name="email">Email</string>
    <string name="email_hint">John.Appleseed@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">123 456 7890</string>
    <string name="primary_skills">Primary Skills</string>
    <string name="primary_skills_hint">Android, iOS</string>
    <string name="android_experience">Android Experience</string>
    <string name="android_portfolio_url">Android Portfolio</string>
    <string name="ios_experience">iOS Experience</string>
    <string name="ios_portfolio_url">iOS Portfolio</string>
    <string name="other_experience">Other Experience</string>
    <string name="other_portfolio_url">Other Portfolio</string>
    <string name="linkedin_url">LinkedIn</string>
    <string name="resume_url">Resume URL</string>
    <string name="highest_degree">Highest Degree</string>
    <string name="other_info">Other Info</string>
    <string name="save_rcard">Save rCard</string>
    <string name="conname">Contact Name</string>
    <string name="otherinfo">Other Info</string>
     <string name="sendrcard">Send Rcard</string>
       <string name="send">Send</string>
     <string name="save">Save</string>
    <string name="home_msg">Send Resume</string>
    <string name="send_bluetooth">Send using Bluetooth</string>
     <string name="send_nfc">Send using NFC</string>
    <string name="receive">RECEIVE</string>
    <string name="action_settings">Settings</string>
    <string name="upload_file">Upload Resume for offline Access</string>
    <string name="upload">Upload</string>
    <string-array name="fill_options_array">
        <item >Upload Resume</item>
        <item>Send local Resume </item>
        <item>Send local Resume via app</item>
        <item>Delete local Resume</item>
        <item >Build custom Resume</item>
    </string-array>
    <string-array name="jobseeker_priority_array">
        <item>low</item>
        <item>medium</item>
        <item>high</item>
    </string-array>
<!--     <string name = "email">Email *</string>
 -->    
</resources>
