<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        >

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/emailLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/email" />


             
			 <ViewSwitcher
			    android:id="@+id/emailViewSwitcher"
			    android:layout_width="0dp"
                android:layout_height="wrap_content"
			    android:layout_weight="0.60" >
			    
			    
                <EditText
                    android:id="@+id/emailTxt"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"/>
                
			    <TextView
			        android:id="@+id/emailTxtView"
			        android:textSize="16sp"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:hint="@string/email_hint"
			        android:clickable="true"
			        android:onClick="TextViewClicked" />

            
            </ViewSwitcher>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/nameLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:maxLines="3"
                android:scrollbars="vertical"
                android:hint="@string/name_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/phoneLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phoneTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:hint="@string/phone_hint" 
                android:inputType="phone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/primaryskillsLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/primary_skills" />

            <EditText
                android:id="@+id/primaryskillsTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:maxLines="3"
                android:scrollbars="vertical"
                android:hint="@string/primary_skills_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/AndroidLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/android_experience" />

            <Spinner
                android:id="@+id/androidexpList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/iosLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/ios_experience" />

            <Spinner
                android:id="@+id/iosexpList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/androidportfolioLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/android_portfolio_url" />

            <EditText
                android:id="@+id/androidportfolioTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60" 
                android:inputType="textUri"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/iosportfolioLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/ios_portfolio_url" />

            <EditText
                android:id="@+id/iosportfolioTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:inputType="textUri" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/othportfolioLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/other_portfolio_url" />

            <EditText
                android:id="@+id/othportfolioTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60" 
                android:inputType="textUri"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/linkedinLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/linkedin_url" />

            <EditText
                android:id="@+id/linkedinTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:inputType="textUri"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/resumeLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/resume_url" />

            <EditText
                android:id="@+id/resumeTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60" 
                android:inputType="textUri"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/degreeLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/highest_degree" />

            <EditText
                android:id="@+id/highestdegreeTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/otherinfoLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:gravity="end"
                android:text="@string/other_info" />

            <EditText
                android:id="@+id/otherinfoTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/saveAllBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SaveAll"
            android:text="@string/save_rcard"/>
    </LinearLayout>

</ScrollView>