<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/name" />

        <EditText
            android:id="@+id/companynameTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/conname" />

        <EditText
            android:id="@+id/companycontactTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/email" />

        <EditText
            android:id="@+id/companyemailTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/otherinfo" />

        <EditText
            android:id="@+id/companyotherInfoTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#99CC32"
            android:onClick="saveCompanyInfoClick"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/sendrCardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16sp"
            android:background="#99CC32"
            android:onClick="sendRcardClick"
            android:text="@string/send"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>